force-app/main/default/objects/Case/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Assignment_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Type</label>
    <type>Text</type>
</CustomField>