force-app/main/default/objects/Case/fields/Business_Risk_Assessment_Form_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Business_Risk_Assessment_Form_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Risk Assessment Form</label>
    <type>Checkbox</type>
</CustomField>