force-app/main/default/objects/Case/fields/Business_Risk_Assessment_Form_formula__c.field-meta.xml
<CustomField>
    <fullName>Business_Risk_Assessment_Form_formula__c</fullName>
    <formula>IF(CAF_Form_Completed__c, &apos;✅&apos;,&apos;&apos;)</formula>
    <label>Business Risk Assessment Form</label>
    <type>Text</type>
</CustomField>