force-app/main/default/objects/Case/fields/CAF_Form_Completed__c.field-meta.xml
<CustomField>
    <fullName>CAF_Form_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAF Form Completed</label>
    <type>Checkbox</type>
</CustomField>