force-app/main/default/objects/Case/fields/Case_Area__c.field-meta.xml
<CustomField>
    <fullName>Case_Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Area</valueSetName>
    </valueSet>
</CustomField>