force-app/main/default/objects/Case/fields/Case_Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assignment_Type</valueSetName>
    </valueSet>
</CustomField>