force-app/main/default/objects/Case/fields/Case_Referred__c.field-meta.xml
<CustomField>
    <fullName>Case_Referred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Referred</label>
    <type>Checkbox</type>
</CustomField>