force-app/main/default/objects/Case/fields/CF_CAF__c.field-meta.xml
<CustomField>
    <fullName>CF_CAF__c</fullName>
    <formula>IF(CF_CAF_checkbox__c, &apos;✅&apos;,&apos;&apos;)</formula>
    <label>CF CAF</label>
    <type>Text</type>
</CustomField>