force-app/main/default/objects/Case/fields/CF_CAF_checkbox__c.field-meta.xml
<CustomField>
    <fullName>CF_CAF_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CF CAF</label>
    <type>Checkbox</type>
</CustomField>