force-app/main/default/objects/Case/fields/Companies_House__c.field-meta.xml
<CustomField>
    <fullName>Companies_House__c</fullName>
    <formula>IF(NOT(ISBLANK(Account.Beauhurst_ID__c)),HYPERLINK(&quot;https://find-and-update.company-information.service.gov.uk/company/&quot; &amp; Account.Beauhurst_ID__c, &quot;View on Companies House&quot;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Companies House</label>
    <type>Text</type>
</CustomField>