force-app/main/default/objects/Case/fields/Continuation_Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>Continuation_Form_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Continuation Form Complete?</label>
    <type>Checkbox</type>
</CustomField>