force-app/main/default/objects/Case/fields/Continuation_Form_Complete_Formula__c.field-meta.xml
<CustomField>
    <fullName>Continuation_Form_Complete_Formula__c</fullName>
    <formula>IF( Continuation_Form_Complete__c, &apos;✅&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Continuation Form Complete</label>
    <type>Text</type>
</CustomField>