force-app/main/default/objects/Case/fields/Declined_Additional_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declined_Additional_Reason__c</fullName>
    <label>Declined Additional Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>