force-app/main/default/objects/Case/fields/Document_Signed__c.field-meta.xml
<CustomField>
    <fullName>Document_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Signed?</label>
    <type>Checkbox</type>
</CustomField>