force-app/main/default/objects/Case/fields/Engagement_Pack_Approved__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Pack_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engagement Pack Approved</label>
    <type>Checkbox</type>
</CustomField>