force-app/main/default/objects/Case/fields/Engagement_Pack_Approved_Formula__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Pack_Approved_Formula__c</fullName>
    <formula>IF( Engagement_Pack_Approved__c , &apos;✅&apos;,&apos;&apos;)</formula>
    <label>Engagement Pack Approved</label>
    <type>Text</type>
</CustomField>