force-app/main/default/objects/Case/fields/Engagement_Pack_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Pack_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engagement Pack Rejected</label>
    <type>Checkbox</type>
</CustomField>