force-app/main/default/objects/Case/fields/Escalation_Approved__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation Approved</label>
    <type>Checkbox</type>
</CustomField>