force-app/main/default/objects/Case/fields/Escalation_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation Rejected</label>
    <type>Checkbox</type>
</CustomField>