force-app/main/default/objects/Case/fields/Form_Approved__c.field-meta.xml
<CustomField>
    <fullName>Form_Approved__c</fullName>
    <formula>IF(Approved__c,  &apos;✅&apos;,&apos;&apos;)</formula>
    <label>Form Approved</label>
    <type>Text</type>
</CustomField>