force-app/main/default/objects/Case/fields/Form_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Form_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Rejected</label>
    <type>Checkbox</type>
</CustomField>