force-app/main/default/objects/Case/fields/Individual_Ongoing_Monitoring_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Individual_Ongoing_Monitoring_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Individual Ongoing Monitoring</label>
    <type>Checkbox</type>
</CustomField>