force-app/main/default/objects/Case/fields/Individual_Ongoing_Monitoring_formula__c.field-meta.xml
<CustomField>
    <fullName>Individual_Ongoing_Monitoring_formula__c</fullName>
    <formula>IF(Individual_Ongoing_Monitoring_checkbox__c, &apos;✅&apos;,&apos;&apos;)</formula>
    <label>Individual Ongoing Monitoring</label>
    <type>Text</type>
</CustomField>