force-app/main/default/objects/Case/fields/Individual_Risk_Form_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Individual_Risk_Form_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Individual Risk Form</label>
    <type>Checkbox</type>
</CustomField>