force-app/main/default/objects/Case/fields/Individual_Risk_Form_formula__c.field-meta.xml
<CustomField>
    <fullName>Individual_Risk_Form_formula__c</fullName>
    <formula>IF(CAF_Form_Completed__c, &apos;✅&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual Risk Form</label>
    <type>Text</type>
</CustomField>