force-app/main/default/objects/Case/fields/Manual_Engagement_Pack_received__c.field-meta.xml
<CustomField>
    <fullName>Manual_Engagement_Pack_received__c</fullName>
    <label>Manual Engagement Pack received?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>