force-app/main/default/objects/Case/fields/Ongoing_Monitoring_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Monitoring_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ongoing Monitoring</label>
    <type>Checkbox</type>
</CustomField>