force-app/main/default/objects/Case/fields/Ongoing_Monitoring_formula2__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Monitoring_formula2__c</fullName>
    <formula>IF( Continuation_Form_Complete__c, &apos;✅&apos;,&apos;&apos;)</formula>
    <label>Ongoing Monitoring</label>
    <type>Text</type>
</CustomField>