force-app/main/default/objects/Case/fields/Ongoing_Monitoring_formula__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Monitoring_formula__c</fullName>
    <description>Ongoing Monitoring</description>
    <formula>IF(Ongoing_Monitoring_checkbox__c = TRUE, IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068KI000000Hcti&amp;operationContext=CHATTER&amp;contentId=05TKI000000BIrs&quot;, &quot;Approved&quot;, 20, 20), &apos;&apos;)</formula>
    <label>Ongoing Monitoring</label>
    <type>Text</type>
</CustomField>