force-app/main/default/objects/Case/fields/Opportunity_Area__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Area__c</fullName>
    <formula>TEXT(Opportunity__r.Opportunity_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Area</label>
    <type>Text</type>
</CustomField>