force-app/main/default/objects/Case/fields/Opportunity_Type_Area__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type_Area__c</fullName>
    <formula>TEXT(Opportunity__r.Opportunity_Type_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Type Area</label>
    <type>Text</type>
</CustomField>