force-app/main/default/objects/Case/fields/Partner_Approved_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Partner_Approved_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Approved</label>
    <type>Checkbox</type>
</CustomField>