force-app/main/default/objects/Case/fields/Partner_Approved_formula__c.field-meta.xml
<CustomField>
    <fullName>Partner_Approved_formula__c</fullName>
    <formula>IF(Partner_Approved_checkbox__c, &apos;✅&apos;,&apos;&apos;)</formula>
    <label>Partner Approved</label>
    <type>Text</type>
</CustomField>