force-app/main/default/objects/Case/fields/Partner_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Rejected</label>
    <type>Checkbox</type>
</CustomField>