force-app/main/default/objects/Case/fields/PEP_RCA_Identified__c.field-meta.xml
<CustomField>
    <fullName>PEP_RCA_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PEP/RCA Identified?</label>
    <type>Checkbox</type>
</CustomField>