force-app/main/default/objects/Case/fields/PEP_Rejected__c.field-meta.xml
<CustomField>
    <fullName>PEP_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PEP Rejected</label>
    <type>Checkbox</type>
</CustomField>