force-app/main/default/objects/Case/fields/PEP_SIP_RCA_Approved_checkbox__c.field-meta.xml
<CustomField>
    <fullName>PEP_SIP_RCA_Approved_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PEP/SIP/RCA Approved</label>
    <type>Checkbox</type>
</CustomField>