force-app/main/default/objects/Case/fields/PEP_SIP_RCA_Approved_formula__c.field-meta.xml
<CustomField>
    <fullName>PEP_SIP_RCA_Approved_formula__c</fullName>
    <formula>IF(PEP_SIP_RCA_Approved_checkbox__c = TRUE, IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068KI000000Hcti&amp;operationContext=CHATTER&amp;contentId=05TKI000000BIrs&quot;, &quot;Approved&quot;, 20, 20), &apos;&apos;)</formula>
    <label>PEP/SIP/RCA Approved</label>
    <type>Text</type>
</CustomField>