force-app/main/default/objects/Case/fields/Previously_Onboarded__c.field-meta.xml
<CustomField>
    <fullName>Previously_Onboarded__c</fullName>
    <formula>IF(TEXT(Account.Previously_Onboarded__c)=&quot;Yes&quot;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previously Onboarded</label>
    <type>Checkbox</type>
</CustomField>