force-app/main/default/objects/Case/fields/Risk_and_Compliance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Risk_and_Compliance_Notes__c</fullName>
    <label>Risk and Compliance Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>