force-app/main/default/objects/Case/fields/Risk_Compliance_Approved_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Risk_Compliance_Approved_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk / Compliance Approved</label>
    <type>Checkbox</type>
</CustomField>