force-app/main/default/objects/Case/fields/Risk_Compliance_Approved_formula__c.field-meta.xml
<CustomField>
    <fullName>Risk_Compliance_Approved_formula__c</fullName>
    <formula>IF(Risk_Compliance_Approved_checkbox__c,&apos;✅&apos;,&apos;&apos;)</formula>
    <label>Risk / Compliance Approved</label>
    <type>Text</type>
</CustomField>