force-app/main/default/objects/Case/fields/Risk_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk Rejected</label>
    <type>Checkbox</type>
</CustomField>