force-app/main/default/objects/Case/fields/Sharepoint_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Folder_ID__c</fullName>
    <label>Sharepoint Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>