force-app/main/default/objects/Case/fields/Sharepoint_Public_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Public_Folder_ID__c</fullName>
    <label>Sharepoint Public Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>