force-app/main/default/objects/Case/fields/Sharepoint_Secure_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Secure_Folder_URL__c</fullName>
    <label>Sharepoint Secure Folder URL</label>
    <type>Url</type>
</CustomField>