force-app/main/default/objects/Case/fields/Smart_Search__c.field-meta.xml
<CustomField>
    <fullName>Smart_Search__c</fullName>
    <formula>HYPERLINK(&quot;https://app.smartsearch.com/ &quot;, &quot;Smart Search&quot;)</formula>
    <label>Smart Search</label>
    <type>Text</type>
</CustomField>