force-app/main/default/objects/Case/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>TEXT(Opportunity__r.Opportunity_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>