force-app/main/default/objects/Case/recordTypes/Service_Line.recordType-meta.xml
<RecordType>
    <fullName>Service_Line</fullName>
    <active>true</active>
    <businessProcess>Onboarding Support Process</businessProcess>
    <label>Service Line</label>
</RecordType>