force-app/main/default/objects/Case/recordTypes/Yearly_Check.recordType-meta.xml
<RecordType>
    <fullName>Yearly_Check</fullName>
    <active>true</active>
    <businessProcess>Onboarding Support Process</businessProcess>
    <label>Yearly Check</label>
</RecordType>