force-app/main/default/objects/Case/validationRules/V2_ClosedReasonRequirement.validationRule-meta.xml
<ValidationRule>
    <fullName>V2_ClosedReasonRequirement</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Setup.Org_Wide_Settings__c.Disable_Validation_Rules__c = false,
ISCHANGED(Status),
Text(Status) = &apos;Closed&apos;,
ISBLANK(TEXT(Closed_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Closed_Reason__c</errorDisplayField>
    <errorMessage>Please ensure Closed Reason is populated before closing the case.</errorMessage>
</ValidationRule>