force-app/main/default/objects/Case/validationRules/V3_FormApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>V3_FormApproval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $Setup.Org_Wide_Settings__c.Disable_Validation_Rules__c = false,
 Approved__c = False,
 ISCHANGED(Status),
 Text(Status) = &quot;CAF Form Completion&quot;,
  AND(
   Text(Status) &lt;&gt; &quot;Closed&quot;,
   Text(Closed_Reason__c) &lt;&gt; &quot;Onboarded&quot;
  )
)</errorConditionFormula>
    <errorMessage>Please ensure the Onboarding Case has gained Form Approval before moving the Case to the next stage</errorMessage>
</ValidationRule>