force-app/main/default/objects/Case/validationRules/V5_RiskComplianceApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>V5_RiskComplianceApproval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $Setup.Org_Wide_Settings__c.Disable_Validation_Rules__c = false,
 Risk_Compliance_Approved_checkbox__c = False,
 ISCHANGED(Status),
  OR(
   Text(Status) = &quot;Client Review and Doc Gen&quot;,
   Text(Status) = &quot;Closed&quot;
 )
)</errorConditionFormula>
    <errorMessage>Please ensure the Onboarding Case has gained Risk / Compliance Approval before moving the Case to the next stage</errorMessage>
</ValidationRule>