force-app/main/default/objects/Case/validationRules/V8_Engagement_Pack_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>V8_Engagement_Pack_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Setup.Org_Wide_Settings__c.Disable_Validation_Rules__c = false,
Engagement_Pack_Approved__c = False,
ISCHANGED(Status),
Text(Status) = &quot;Closed&quot;

)</errorConditionFormula>
    <errorMessage>Please ensure the Onboarding Case has gained Engagement Pack Approval before moving the Case to the next stage</errorMessage>
</ValidationRule>