force-app/main/default/objects/Case/listViews/Escalation_Team_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Escalation_Team_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Escalation Team</label>
    <queue>Escalation_Team_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>