force-app/main/default/objects/Case/listViews/Lifecycle_Managers_Case.listView-meta.xml
<ListView>
    <fullName>Lifecycle_Managers_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Lifecycle Managers</label>
    <queue>Lifecycle_Managers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>