force-app/main/default/objects/Case/listViews/Lifecycle_Onboarding_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Lifecycle_Onboarding_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Lifecycle Onboarding Queue</label>
    <queue>Lifecycle_Onboarding_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>