force-app/main/default/objects/Case/listViews/Risk_and_Compliance_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Risk_and_Compliance_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Risk and Compliance</label>
    <queue>Risk_and_Compliance_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>