force-app/main/default/objects/Case/listViews/Risk_Team_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Risk_Team_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Risk Team Queue</label>
    <queue>Risk_Team_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>